[package]
name = "sumcheck-multi-proving"
version = "0.1.0"
edition = "2024"

[dependencies]
ceno-sumcheck = { package = "sumcheck", git = "https://github.com/scroll-tech/ceno.git" }
ceno-transcript = { package = "transcript", git = "https://github.com/scroll-tech/ceno.git" }
ff_ext = { git = "https://github.com/scroll-tech/ceno.git" }
multilinear_extensions = { git = "https://github.com/scroll-tech/ceno.git" }
p3 = { git = "https://github.com/scroll-tech/ceno.git" }


icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-goldilocks = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }
icicle-hash = { git = "https://github.com/ingonyama-zk/icicle.git", branch="main" }

log = "0.4.27"
env_logger = "0.11.8"
merlin = "3.0.0"
either = "1.15.0"
itertools = "0.14.0"
